[gd_scene load_steps=8 format=2]

[ext_resource path="res://gui/roots/hud/statistics/Statistics.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/roots/hud/hud.gd" type="Script" id=2]
[ext_resource path="res://gui/roots/hud/quests/Quests.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/menus/loading/Loading.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Loading:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Quests:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Statistics:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "Show Loading Screen"
tracks/0/type = "value"
tracks/0/path = NodePath("Loading:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Show Quests"

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="HUDAnimator" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 2 )
"anims/Show Loading Screen" = SubResource( 1 )
"anims/Show Quests" = SubResource( 3 )

[node name="Statistics" parent="." instance=ExtResource( 1 )]
mouse_filter = 2

[node name="Quests" parent="." instance=ExtResource( 3 )]

[node name="Loading" parent="." instance=ExtResource( 4 )]
pause_mode = 2
visible = false

[connection signal="show_quests" from="Statistics" to="." method="s__show_quests"]
[connection signal="hide_quests" from="Quests" to="." method="s__hide_quests"]
